...
                        },
                      ),
                    ),
                    Expanded(
                      child: Center(
                        child: Text(
                          'YOUR RESULT',
                          style: TextStyle(
                            color: Colors.white,
                            fontSize: 20.sp,
                            fontWeight: FontWeight.bold,
                          ),
                        ),
...
                        height,
                        weight,
                      ),
                    ),
                    _buildActionButton(
                      icon: Icons.history,
                      label: 'History',
                      onTap: () =>
                          Navigator.pushNamed(context, 'history_screen'),
                    ),
                  ],
                ),
                SizedBox(height: 20.h),
...
