...
            Icons.transgender,
            _colors.transgenderCardColor,
            _colors.transgenderTextColor,
          ),
          SizedBox(height: 20.h),
          Button(
            label: "Next",
            color: kActiveColor,
            textColor: Colors.black,
            onPressed: () {
              TooltipManager.hideTooltip();
              _navigateToHeightScreen();
            },
...
